--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- 
     - primary meta tags
   -->
-  <title>Chew Room - Great coffee good vibes</title>
+  <title>Chewroom - Great coffee good vibes</title>
   <meta name="title" content="Chew Room - Great coffee good vibes">
   <meta name="description" content="Chew Room - Premium coffee shop in Manila, Philippines serving the finest coffee blends and local favorites">
 
@@ -157,7 +157,7 @@
         style="background-image: url('./assets/images/ironman.jpg')">
         <div class="container">
 
-          <p class="section-subtitle has-before reveal-left" data-reveal>Welcome to Chew Room</p>
+          <p class="section-subtitle has-before reveal-left" data-reveal>Welcome to Chewroom</p>
 
           <h1 class="h1 hero-title reveal-left" id="hero-label" data-reveal>Manila's Finest Coffee Experience</h1>
 
@@ -196,7 +196,7 @@
             <h2 class="h2 section-title reveal-left" data-reveal>Manila's Premier Coffee Destination</h2>
 
             <p class="section-text reveal-left" data-reveal>
-              Located in the heart of Manila, Chew Room brings together the finest coffee beans from the Philippines and around the world. 
+              Located in the heart of Manila, Chewroom brings together the finest coffee beans from the Philippines and around the world. 
               We're passionate about serving exceptional coffee experiences that celebrate both local Filipino coffee culture and international brewing traditions. 
               Our cozy atmosphere and expertly crafted beverages make us the perfect spot for coffee lovers, students, and professionals alike.
             </p>
@@ -208,7 +208,7 @@
               </figure>
 
               <p class="card-text">
-                "Chew Room serves the best coffee in Manila with genuine Filipino hospitality"
+                "Chewroom serves the best coffee in Manila with genuine Filipino hospitality"
               </p>
             </div>
 
@@ -306,7 +306,7 @@
           <p class="section-subtitle text-center" data-reveal>Choose Best Coffee</p>
 
           <h2 class="h2 section-title text-center" id="menu-label" data-reveal>
-            Chew Room Popular Coffee Menu
+            Chewroom Popular Coffee Menu
           </h2>
 
           <ul class="grid-list" style="background-image: url('./assets/images/menu-bg-logo.png')">
@@ -483,7 +483,7 @@
             </h2>
 
             <p class="section-text reveal-right" data-reveal>
-              Born in Manila with a passion for exceptional coffee, Chew Room combines traditional Filipino coffee culture 
+              Born in Manila with a passion for exceptional coffee, Chewroom combines traditional Filipino coffee culture 
               with modern brewing techniques to create unforgettable experiences for every coffee enthusiast.
             </p>
 
@@ -644,7 +644,7 @@
 
                 <div class="card-content">
 
-                  <h3 class="h3 card-title">Chew Room's Journey: Bringing Premium Coffee Culture to Manila</h3>
+                  <h3 class="h3 card-title">Chewroom's Journey: Bringing Premium Coffee Culture to Manila</h3>
 
                   <div class="card-meta">
 
