--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
 
             <p class="section-subtitle reveal-right" data-reveal>Why Choose Us</p>
 
-            <h2 class="h2 section-title reveal-right" id="feature-label" data-reveal>Chew Room Manila Founded For
+            <h2 class="h2 section-title reveal-right" id="feature-label" data-reveal>Chewroom Manila Founded For
               Extraordinary Coffee Experience
             </h2>
 
