--- a/index.html
+++ b/index.html
@@ -691,7 +691,7 @@
         <div class="container">
 
           <div>
-            <p class="section-subtitle reveal-left" data-reveal>Need A Table At Chew Room</p>
+            <p class="section-subtitle reveal-left" data-reveal>Need A Table At Chewroom</p>
 
             <h2 class="h2 section-title reveal-left" id="cta-label" data-reveal>Reserve Your Table For An Amazing Coffee Experience
             </h2>
